@@ -21,6 +21,7 @@ fixed bugs:
 - fixed bug w.r.t. memory allocation for all values of a column in lpi_cpx.c
 - fixed bug in copy method of objvardata which should only create a new SCIP_VARDATA if the implemented subclass create a copy of the given objvardata object
 - fixed bug in heur_shiftandpropagate where some variables were initialized too late
+- fixed bug in cons.c which didn't allow the changing of the separation and enforcement flag of a constraint in the problem stage
 
 
 SCIP version 2.0.0
